# systems-craft

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DOCKER_QUICKSTART.md  Dockerfile  KAFKA_PRODUCER_FIX_RESULTS.md  PHASE_11_KAFKA_INTEGRATION.md  PHASE_11_RESULTS.md  QUICKSTART_KAFKA.md  README.md  REORGANIZATION_SUMMARY.md  backup-repo.sh  compare_load_tests.sh  connection_demo  connection_demo.cpp  docker-compose.yml  drain_flow_annotated.cpp  kafka_comparison_benchmark.sh  kafka_comparison_results.txt  kafka_vs_file_visualization.html  measure_rps.sh  phase7_rps_analysis.md  phase8_design.md  phase8_results.md  rps_measurement_results.txt  run_benchmark.sh  simple_benchmark_results.txt  simple_kafka_benchmark.sh  thread_pool_output.txt  thread_pool_perf.txt
.claude/commands/: worktree.md
.devcontainer/: Dockerfile  devcontainer.json
.worktrees/test-after-removal/: test-after-removal.txt  test-after-ruleset-removal.txt
blog/: file-based-queue-layout.md  message-queue-partitions-explained.md  producer-consumer-flow-detailed.md  thread_vs_process_demo  thread_vs_process_demo.cpp
craft1/: README.md
craft2/: README.md
craft2/phase-1-partitioned-queue/: design.md
craft2/phase-2-consumer-coordination/: design.md
craft2/phase-3-distributed-coordination/: DESIGN.md
craft3/: README.md
craft4/: README.md
craft5/: README.md
docs/: FIREBASE_SETUP.md  PHASES_TO_CRAFTS_MAPPING.md  bottleneck_analysis.md  craft0.html  craft1.html  craft2.html  defense_in_depth_skills.md  end_to_end_flow.md  index.html  learning-hub-v2.html  metric_transformation_visual.html  phase8_architecture_visual.html  progress.html
docs/kafka-fix/: OVERVIEW.md  README.md
include/: ingestion_service.h  kafka_consumer.h  kafka_producer.h  partitioned_queue.h  queue_consumer.h
src/: CMakeLists.txt  consumer_main.cpp  event_loop.cpp  event_loop.h  ingestion_service.cpp  kafka_consumer.cpp  kafka_producer.cpp  main.cpp  partitioned_queue.cpp  queue_consumer.cpp
templates/: README.md  craft1_phase1_starter.cpp  craft1_phase2_starter.cpp  craft1_phase3_starter.cpp
tools/: conversation_capture_template.md
website/: TESTING_GUIDE.md  architecture.html  benchmark.html  craft0.html  craft1.html  craft2.html  index.html  progress.html
website/docs/: blocking_io_explained.html
